access control and lots of styling

--- a/MusicForum/Views/Comments/Create.cshtml
+++ b/MusicForum/Views/Comments/Create.cshtml
@@ -30,7 +30,7 @@
 </div>
 
 <div>
-    <a asp-action="Discussions" asp-action="Edit" asp-route-id="@ViewBag.DiscussionId">Back to List</a>
+    <a asp-action="Discussions" asp-route-id="@ViewBag.DiscussionId">Back to List</a>
 </div>
 
 @section Scripts {
