--- a/MusicForum/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/MusicForum/Areas/Identity/Pages/Account/Logout.cshtml
@@ -4,18 +4,24 @@
     ViewData["Title"] = "Log out";
 }
 
-<header>
+<header class="home-header">
     <h1>@ViewData["Title"]</h1>
-    @{
-        if (User.Identity?.IsAuthenticated ?? false)
-        {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
-            </form>
-        }
-        else
-        {
-            <p>You have successfully logged out of the application.</p>
-        }
-    }
+    <div class="discussion-container">
+        <div class="discussion-row">
+            @{
+                if (User.Identity?.IsAuthenticated ?? false)
+                {
+                    <form class="comments-section" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                        <button type="submit" class="create-button">Click here to Logout</button>
+                    </form>
+                }
+                else
+                {
+                    <section class="comments-section">
+                        <p>You have successfully logged out of the application.</p>
+                    </section>
+                }
+            }
+        </div>
+    </div>
 </header>
