--- a/MusicForum/Views/Discussions/Edit.cshtml
+++ b/MusicForum/Views/Discussions/Edit.cshtml
@@ -13,6 +13,9 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="DiscussionId" />
+            <input type="hidden" asp-for="ImageFileName" />
+            <input type="hidden" asp-for="CreateDate" />
+            <input type="hidden" asp-for="ApplicationUserId" />
 
             <div class="mb-3">
                 <div class="mt-4">
@@ -24,17 +27,16 @@
 
             <div class="mb-3">
                 <label asp-for="Content" class="comment"></label>
-                <input asp-for="Content" class="form-control" />
+                <textarea asp-for="Content" class="form-control" rows="5"></textarea>
+
                 
             </div>
             
 
             <div class="mb-3">
-                <label asp-for="CreateDate" class="comment"></label>
-                <div>
-                    <input asp-for="CreateDate" class="form-control" />
-                </div>
-                <span asp-validation-for="CreateDate" class="text-danger"></span>
+                <label asp-for="ImageFile" class="comment"></label>
+                <input type="file" asp-for="ImageFile" class="form-control" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <input type="submit" value="Save" class="b" />
