--- a/MusicForum/Views/Home/DiscussionDetails.cshtml
+++ b/MusicForum/Views/Home/DiscussionDetails.cshtml
@@ -5,27 +5,50 @@
     string imageUrl = Url.Content("/photos/" + Model.ImageFileName);
 }
 
+
 <div class="container mt-5">
     <div class="row">
-        <div class="col-12 col-md-3 text-center mb-5">
-            <img src="@imageUrl" class="img-fluid thumbnail rounded-circle" alt="@Model.Title" />
-        </div>
 
+        
         <div class="col-12 col-md-9">
             <div class="card shadow-sm">
                 <div class="card-header">
-                    <h4 class="discussion-title"><i class="fa-solid fa-comment"></i> @Html.DisplayFor(model => model.Title)</h4>
-                    <p class="card-subtitle text-muted">
+                    <h4 class="discussion-title"> @Html.DisplayFor(model => model.Title)</h4>
+                    <img src="@imageUrl" alt="Discussion Image" class="img-fluid" />
+
+                    <p class="card-subtitle text-muted mt-1 mb-3" style="font-size: small;">
                         <i class="fa-regular fa-calendar"></i> Created @Model.CreateDate.ToString("MMM d yyyy")
                     </p>
+                    @if (Model.ApplicationUser != null)
+                    {
+                        <div class="d-flex align-items-center mb-3">
+                            <div>
+                                @if (!string.IsNullOrEmpty(Model.ApplicationUser.ImageFilename))
+                                {
+                                    <img src="~/profile_img/@Model.ApplicationUser.ImageFilename" alt="@Model.ApplicationUser.Name" class="rounded-circle me-2" style="width: 75px; height: 75px; object-fit: cover;" />
+                                }
+                            </div>
+                            <div>
+                                <p class="card-subtitle text-muted mb-0" style="font-size: small;">Thread by: @Model.ApplicationUser.Name</p>
+                                @if (Model.ApplicationUser.FavouriteAlbum != null)
+                                {
+                                    <p class="card-subtitle text-muted" style="font-size: small;">
+                                        Favourite Album: <span class="text-primary">@Model.ApplicationUser.FavouriteAlbum <i class="fa-solid fa-music"></i></span>
+                                    </p>
+                                }
+                            </div>
+                        </div>
+
+                    }
                 </div>
                 <div class="card-body">
+                    
                     <p>@Html.DisplayFor(model => model.Content)</p>
                 </div>
             </div>
 
             <div class="comments-section">
-                <h5 class="discussion-title">Comments</h5>
+                <h5 class="discussion-title"><i class="fa-solid fa-comment"></i> Comments</h5>
                 <div class="comments-content">
                     @if (Model.Comments != null && Model.Comments.Any())
                     {
@@ -43,11 +66,13 @@
                     {
                         <p>No comments yet. Be the first to comment!</p>
                     }
+
+                    
                 </div>
             </div>
 
             <div class="mt-3 text-center">
-                <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="create-button">Add Comment</a>
+                <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="cbutton">Add Comment</a>
             </div>
         </div>
     </div>
