--- a/MusicForum/Views/Discussions/Delete.cshtml
+++ b/MusicForum/Views/Discussions/Delete.cshtml
@@ -1,45 +1,41 @@
 ﻿@model MusicForum.Models.Discussion
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Discussion";
+    string imageUrl = Url.Content("/photos/" + Model.ImageFileName);
 }
 
-<h1>Delete</h1>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-12 col-md-9">
+            <div class="card shadow-sm">
+                <div class="card-header">
+                    <h4 class="discussion-title text-danger">Delete Discussion</h4>
+                    <p class="text-muted mb-0" style="font-size: 1rem;">Are you sure you want to delete this discussion?</p>
+                </div>
+                <div class="card-body">
+                    <div class="mb-4 text-center">
+                        <img src="@imageUrl" alt="Discussion Image" class="img-fluid" style="max-height: 250px; object-fit: cover;" />
+                    </div>
+                    <dl class="row">
+                        <dt class="col-sm-3 text-danger">Title</dt>
+                        <dd class="col-sm-9">@Html.DisplayFor(model => model.Title)</dd>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Discussion</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Content)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Content)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageFileName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageFileName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="DiscussionId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+                        <dt class="col-sm-3 text-danger">Content</dt>
+                        <dd class="col-sm-9">@Html.DisplayFor(model => model.Content)</dd>
+
+                        <dt class="col-sm-3 text-danger">Created On</dt>
+                        <dd class="col-sm-9">@Html.DisplayFor(model => model.CreateDate)</dd>
+                    </dl>
+                </div>
+                <div class="card-footer text-center">
+                    <form asp-action="Delete" style="display: inline;">
+                        <input type="hidden" asp-for="DiscussionId" />
+                        <button type="submit" class="btn btn-danger" style="padding: 10px 20px; font-size: 1rem; border-radius: 5px;">Delete</button>
+                    </form>
+                    <a asp-action="Index" class="btn btn-secondary" style="padding: 10px 20px; font-size: 1rem; border-radius: 5px; margin-left: 10px;">Cancel</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
