--- a/MusicForum/Views/Home/Index.cshtml
+++ b/MusicForum/Views/Home/Index.cshtml
@@ -49,6 +49,9 @@
                 <p class="discussion-created">
                     Comments: @(discussion.Comments?.Count() ?? 0)
                 </p>
+                <p class="discussion-created">
+					By: @(discussion.ApplicationUser?.Name)
+                </p>
                 
                 
             </div>
