--- a/MusicForum/Views/Home/DiscussionDetails.cshtml
+++ b/MusicForum/Views/Home/DiscussionDetails.cshtml
@@ -7,14 +7,14 @@
 
 
 <div class="container mt-5">
-    <div class="row">
+    <div class="row justify-content-center">
 
         
-        <div class="col-12 col-md-9">
+        <div class="col-12 col-md-9 text-center">
             <div class="card shadow-sm">
                 <div class="card-header">
                     <h4 class="discussion-title"> @Html.DisplayFor(model => model.Title)</h4>
-                    <img src="@imageUrl" alt="Discussion Image" class="img-fluid" />
+                    <img src="@imageUrl" alt="Discussion Image" class="img-fluid rounded shadow mt-lg-4" style="width: 400px; height: 400px; object-fit: cover; margin: auto;"  />
 
                     <p class="card-subtitle text-muted mt-1 mb-3" style="font-size: small;">
                         <i class="fa-regular fa-calendar"></i> Created @Model.CreateDate.ToString("MMM d yyyy")
@@ -25,11 +25,15 @@
                             <div>
                                 @if (!string.IsNullOrEmpty(Model.ApplicationUser.ImageFilename))
                                 {
-                                    <img src="~/profile_img/@Model.ApplicationUser.ImageFilename" alt="@Model.ApplicationUser.Name" class="rounded-circle me-2" style="width: 75px; height: 75px; object-fit: cover;" />
+
+                                <a asp-controller="Home" asp-action="Profile" asp-route-id="@Model.ApplicationUser.Id" class="text-decoration-none">
+                                <img src="~/profile_img/@Model.ApplicationUser.ImageFilename" alt="@Model.ApplicationUser.Name" class="rounded-circle me-2" style="width: 75px; height: 75px; object-fit: cover;" /> </a>
                                 }
                             </div>
                             <div>
-                                <p class="card-subtitle text-muted mb-0" style="font-size: small;">Thread by: @Model.ApplicationUser.Name</p>
+                                <a asp-controller="Home" asp-action="Profile" asp-route-id="@Model.ApplicationUser.Id" class="text-decoration-none">
+                                    <p class="card-subtitle text-muted mb-0" style="font-size: small;">Thread by: @Model.ApplicationUser.Name</p>
+                                </a>
                                 @if (Model.ApplicationUser.FavouriteAlbum != null)
                                 {
                                     <p class="card-subtitle text-muted" style="font-size: small;">
@@ -41,7 +45,7 @@
 
                     }
                 </div>
-                <div class="card-body">
+                <div class="card-body text-start">
                     
                     <p>@Html.DisplayFor(model => model.Content)</p>
                 </div>
@@ -72,7 +76,7 @@
             </div>
 
             <div class="mt-3 text-center">
-                <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="cbutton">Add Comment</a>
+                <a asp-controller="Comments" asp-action="Create" asp-route-id="@Model.DiscussionId" class="create-button button">Add Comment</a>
             </div>
         </div>
     </div>
