--- a/MusicForum/wwwroot/css/site.css
+++ b/MusicForum/wwwroot/css/site.css
@@ -42,12 +42,12 @@ html, body {
     }
 
 
-/* Navbar */
+
 .navbar {
     background-color: #8b0000;
 }
 
-/* Logo */
+
 .logo-img {
     height: 10px; 
 }
@@ -96,7 +96,7 @@ html, body {
     }
 
 
-/* Home header */
+
 .home-header {
     font-family: 'Bookman Old Style';
     font-size: 80px; 
@@ -164,8 +164,8 @@ input[type="submit"] {
 /* Profile*/
 
 .profile-picture {
-    width: 300px;
-    height: 300px;
+    max-width: 100%;
+    height: auto;
     border-radius: 50%; 
     border: 3px solid #8b0000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -295,9 +295,13 @@ input[type="submit"] {
 
 
 @media (max-width: 768px) {
+    .home-header {
+        font-size: 4rem;
+    }
+
     .discussion-row {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
 
     .thumbnail {
@@ -305,7 +309,41 @@ input[type="submit"] {
         margin-bottom: 10px;
     }
 
+    .profile-picture {
+        width: 200px;
+        height: 200px;
+    }
+
+    .discussion-container {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .comment-box {
+        width: 100%;
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 480px) {
     .home-header {
-        font-size: 4rem; 
+        font-size: 3rem;
+    }
+
+    .profile-picture {
+        width: 150px;
+        height: 150px;
+    }
+
+    .discussion-container {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 15px;
+        padding: 15px;
+    }
+
+    .comment-box {
+        width: 100%;
+        max-width: 200px;
     }
 }
