can post comments

--- a/MusicForum/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MusicForum/Areas/Identity/Pages/Account/Login.cshtml
@@ -19,7 +19,7 @@
                 <h2 class="discussion-title">Use a local account to log in.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-                <div class="form-floating mb-3">
+                <div class="form-floating mb-3" style="display: block; width: 100%; max-width: 600px; margin: 0 auto;">
                     <input asp-for="Input.Email" class="form-control form-thumbnail" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                     <label asp-for="Input.Email" class="form-label">Email</label>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
