--- a/MusicForum/Views/Discussions/Edit.cshtml
+++ b/MusicForum/Views/Discussions/Edit.cshtml
@@ -8,7 +8,7 @@
 
 <div class="discussion-container">
     <div class="authentication-row">
-        <section class="comments-section">
+        <section class="comments-section" style="width: 500px">
             <form asp-action="Edit">
                 <h2 class="discussion-title">Edit Discussion Details</h2>
                 <hr />
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="form-floating mb-3">
-                    <textarea asp-for="Content" class="form-control form-thumbnail" rows="5" style="min-height: 120px; min-width: 100%;" placeholder="Enter content"></textarea>
+                    <textarea asp-for="Content" class="form-control form-thumbnail" rows="10" style="min-height: 120px; min-width: 100%;" placeholder="Enter content"></textarea>
                     <label asp-for="Content" class="form-label">Content</label>
                 </div>
 
