--- a/MusicForum/wwwroot/css/site.css
+++ b/MusicForum/wwwroot/css/site.css
@@ -177,13 +177,11 @@ input[type="submit"] {
 /*    Discussion section styles */
 
 .discussion-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 30px;
-    padding: 30px;
-    box-sizing: border-box;
-    border: 3px double black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 
 .discussion-row {
     display: grid;
@@ -239,10 +237,12 @@ input[type="submit"] {
 /* Comments section */
 .comments-section {
     background-color: aliceblue;
-    border: 3px double black; 
+    border: 3px double black;
     border-radius: 10px;
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 50px;
+    margin: 0 auto;
+    margin-bottom: 50px;
     text-align: center;
     font-family: NSimSun, sans-serif;
 }
@@ -315,10 +315,11 @@ input[type="submit"] {
     }
 
     .discussion-container {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
+
 
     .comment-box {
         width: 100%;
